// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CountriesListStore execute() withNoTermOrSort should return the input list as is 1`] = `
Array [
  Object {
    "alpha3Code": "AFG",
    "capital": "Kabul",
    "currencies": Array [],
    "languages": Array [],
    "name": "Afghanistan",
    "population": 1,
  },
  Object {
    "alpha3Code": "GBR",
    "capital": "London",
    "currencies": Array [],
    "languages": Array [],
    "name": "UK",
    "population": 2,
  },
  Object {
    "alpha3Code": "USA",
    "capital": "Washington DC",
    "currencies": Array [],
    "languages": Array [],
    "name": "USA",
    "population": 3,
  },
]
`;

exports[`CountriesListStore execute() withSortAndTerm should return the input list sorted by population 1`] = `
Array [
  Object {
    "alpha3Code": "USA",
    "capital": "Washington DC",
    "currencies": Array [],
    "languages": Array [],
    "name": "USA",
    "population": 3,
  },
  Object {
    "alpha3Code": "GBR",
    "capital": "London",
    "currencies": Array [],
    "languages": Array [],
    "name": "UK",
    "population": 2,
  },
]
`;

exports[`CountriesListStore execute() withSortNoTerm should return the input list sorted by population 1`] = `
Array [
  Object {
    "alpha3Code": "USA",
    "capital": "Washington DC",
    "currencies": Array [],
    "languages": Array [],
    "name": "USA",
    "population": 3,
  },
  Object {
    "alpha3Code": "GBR",
    "capital": "London",
    "currencies": Array [],
    "languages": Array [],
    "name": "UK",
    "population": 2,
  },
  Object {
    "alpha3Code": "AFG",
    "capital": "Kabul",
    "currencies": Array [],
    "languages": Array [],
    "name": "Afghanistan",
    "population": 1,
  },
]
`;

exports[`CountriesListStore execute() withTermNoSort should return the input list matches only 1`] = `
Array [
  Object {
    "alpha3Code": "GBR",
    "capital": "London",
    "currencies": Array [],
    "languages": Array [],
    "name": "UK",
    "population": 2,
  },
  Object {
    "alpha3Code": "USA",
    "capital": "Washington DC",
    "currencies": Array [],
    "languages": Array [],
    "name": "USA",
    "population": 3,
  },
]
`;
